--- a/Vitkund/Views/Home/Vitkund.cshtml
+++ b/Vitkund/Views/Home/Vitkund.cshtml
@@ -64,20 +64,18 @@
 <div class="modal fade" id="modalJob" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header">
+            @*<div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle"></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-            </div>
-            <div class="modal-body">
-
-                <img src="~/Content/assets/images/sad.jpg" />
-                <span> We are not for you.</span>
+            </div>*@
+            <div class="modal-body text-center" style="padding-top:30px;">
+                <img src="~/Content/assets/images/sad.png" /><br /><br />
+                <span> <b>We are not provide job.</b> <br />If You are interested in Business then Select Business</span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary close" data-dismiss="modal">Close</button>
-              
             </div>
         </div>
     </div>
@@ -85,16 +83,11 @@
 <div class="modal fade" id="modalBusiness" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle"></h5>
-                <button type="button" class="close closeBusinessModal" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
+           
+            <div class="modal-body text-center" style="padding-top:30px;">
 
-                <img src="~/Content/assets/images/smile.jpg" />
-                <span>Go ahead.</span>
+                <img src="~/Content/assets/images/happy.png" style="max-width:50%;" /><br /><br />
+                <span><b>Go ahead.</b></span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary closeBusinessModal" data-dismiss="modal">Close</button>
