--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -637,7 +637,7 @@
                                         <a href="/contact-us">Contact Us</a>
                                     </li>
                                     <li>
-                                        <a href="/Trending-Business">Tranding Business</a>
+                                        <a href="/Trending-Business">Trending Business</a>
                                     </li>
 
                                     <li>
