--- a/Vitkund/Views/Home/Index.cshtml
+++ b/Vitkund/Views/Home/Index.cshtml
@@ -382,7 +382,7 @@
                     <div class="col-lg-6">
                         <div class="video-popup-wrapper">
                             <img class="w-100 rbt-radius" src="~/Content/assets/images/videos/vit3.png" alt="Video Images">
-                            <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="~/Content/assets/images/videos/vit4.mp4">
+                            <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="~/Content/assets/images/videos/vitkund-intro.mp4">
                                 <span><i class="feather-play"></i></span>
                             </a>
 
@@ -565,7 +565,7 @@
                                 </ul>
                             </div>
                             <div class="pricing-btn">
-                                <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="#">
+                                <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="/vitkund">
                                     <div class="icon-reverse-wrapper">
                                         <span class="btn-text">Buy Now</span>
                                         <span class="btn-icon"><i class="feather-arrow-right"></i></span>
@@ -605,7 +605,7 @@
                                 </ul>
                             </div>
                             <div class="pricing-btn">
-                                <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="#">
+                                <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="/vitkund">
                                     <div class="icon-reverse-wrapper">
                                         <span class="btn-text">Buy Now</span>
                                         <span class="btn-icon"><i class="feather-arrow-right"></i></span>
@@ -644,7 +644,7 @@
                                 </ul>
                             </div>
                             <div class="pricing-btn">
-                                <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="#">
+                                <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="/vitkund">
                                     <div class="icon-reverse-wrapper">
                                         <span class="btn-text">Buy Now</span>
                                         <span class="btn-icon"><i class="feather-arrow-right"></i></span>
@@ -684,7 +684,7 @@
                             </div>
 
                             <div class="pricing-btn">
-                                <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="#">
+                                <a class="rbt-btn btn-gradient hover-icon-reverse w-100" href="/vitkund">
                                     <div class="icon-reverse-wrapper">
                                         <span class="btn-text">Buy Now</span>
                                         <span class="btn-icon"><i class="feather-arrow-right"></i></span>
