--- a/Vitkund/Views/Home/TrendingBusiness.cshtml
+++ b/Vitkund/Views/Home/TrendingBusiness.cshtml
@@ -264,7 +264,7 @@
                             var VideoLink = response.data[i].VideoLink;
 
                             html += '<div class="course-grid-3"> <div class="rbt-card variation-01 rbt-hover"> <div class="rbt-card-img"> <a href="#">';
-                            html += '<div class="rbt-badge-3 bg-white"> <span>-40%</span> <span>Off</span> </div> </a> </div > <div class="rbt-card-body"> <div class="rbt-card-top">  </div> <h4 class="rbt-card-title"> <a href="#">' + Businessname + '</a> </h4><h6>Price Range :- ' + Fromprice + ' - ' + Toprice + '</h6><div class="rbt-card-bottom">';
+                            html += ' </a> </div > <div class="rbt-card-body"> <div class="rbt-card-top">  </div> <h4 class="rbt-card-title"> <a href="#">' + Businessname + '</a> </h4><h6>Price Range :- ' + Fromprice + ' - ' + Toprice + '</h6><div class="rbt-card-bottom">';
                             if (VideoLink != null && VideoLink != '') {
                                 html += '<a class="rbt-btn-link" href="' + VideoLink + '"> Learn More<i class="feather-arrow-right"></i> </a>';
                             }
