--- a/Vitkund/Views/Home/Videos.cshtml
+++ b/Vitkund/Views/Home/Videos.cshtml
@@ -72,23 +72,32 @@
 
                                                             if (item2.VideoImage.ToLower().Contains("content"))
                                                             {
-                                                                <img  class="w-100 rbt-radius" src="@item2.VideoImage" alt="Video Images">
+                                                                <img class="w-100 rbt-radius" src="@item2.VideoImage" alt="Video Images">
                                                             }
                                                             else
                                                             {
                                                                 <img class="w-100 rbt-radius" src="~/Content/Uploads/@item2.VideoImage" alt="Video Images">
 
                                                             }
-                                                            if (item2.VideoFile.ToLower().Contains("content"))
+                                                            if (item2.VideoFile != null)
                                                             {
-                                                                <a  class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="@item2.VideoFile" style="max-width:50px; max-height:50px;">
+                                                                if (item2.VideoFile.ToLower().Contains("content"))
+                                                                {
+                                                                    <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="@item2.VideoFile" style="max-width:50px; max-height:50px;">
 
-                                                                    <span><i class="feather-play"></i></span>
-                                                                </a>
+                                                                        <span><i class="feather-play"></i></span>
+                                                                    </a>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="~/Content/Uploads/@item2.VideoFile" style="max-width:50px; max-height:50px;">
+                                                                        <span><i class="feather-play"></i></span>
+                                                                    </a>
+                                                                }
                                                             }
                                                             else
                                                             {
-                                                                <a  class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="~/Content/Uploads/@item2.VideoFile" style="max-width:50px; max-height:50px;">
+                                                                <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="~/Content/Uploads/@item2.VideoFile" style="max-width:50px; max-height:50px;">
                                                                     <span><i class="feather-play"></i></span>
                                                                 </a>
                                                             }
